Alpha v.0.1 Release
- Updated gitignore to ignore pom.xml.versionsBackup files so they're not accidentally committed
- Updated pom version to 0.1-Alpha
- Updated poms for proper configuration for deploying to Maven Central